# golem-llm

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: ci.yaml
embed/: Makefile.toml  README.md
embed/cohere/: Cargo.toml
embed/cohere/src/: bindings.rs  client.rs  conversions.rs  lib.rs
embed/cohere/wit/: cohere.wit
embed/embed/: Cargo.toml
embed/embed/src/: config.rs  durability.rs  error.rs  lib.rs
embed/embed/wit/: embed.wit
embed/hugging-face/: Cargo.toml
embed/hugging-face/src/: bindings.rs  client.rs  conversions.rs  lib.rs
embed/hugging-face/wit/: hugging_face.wit
embed/openai/: Cargo.toml
embed/openai/src/: bindings.rs  client.rs  conversions.rs  lib.rs
embed/openai/wit/: openai.wit
embed/voyageai/: Cargo.toml
embed/voyageai/src/: bindings.rs  client.rs  conversitions.rs  lib.rs
embed/voyageai/wit/: voyageai.wit
exec/: Makefile.toml
exec/exec/: Cargo.toml
exec/exec/src/: bindings.rs  component.rs  durability.rs
exec/exec/src/javascript/: mod.rs
exec/exec/src/python/: mod.rs
exec/wit/: golem-exec.wit
graph/: Makefile.toml
graph/arangodb/: Cargo.toml
graph/arangodb/src/: bindings.rs  client.rs  helpers.rs  lib.rs  query.rs  transaction.rs  traversal.rs
graph/graph/src/: durability.rs
graph/janusgraph/: Cargo.toml
graph/janusgraph/src/: bindings.rs  client.rs  helpers.rs  lib.rs  query.rs  transaction.rs  traversal.rs
graph/neo4j/: Cargo.toml
graph/neo4j/src/: bindings.rs  helpers.rs  lib.rs  schema.rs  transaction.rs
llm/: Makefile.toml  README.md
llm/anthropic/: Cargo.toml
llm/anthropic/src/: client.rs  conversions.rs  lib.rs
llm/bedrock/: Cargo.toml
llm/bedrock/src/: client.rs  conversions.rs  lib.rs  stream.rs
llm/grok/src/: client.rs  conversions.rs  lib.rs
llm/llm/: Cargo.toml
llm/llm/src/: chat_session.rs  chat_stream.rs  config.rs  durability.rs  error.rs  lib.rs
llm/llm/src/event_source/: event_stream.rs  mod.rs  ndjson_stream.rs  stream.rs
llm/ollama/: Cargo.toml
llm/ollama/src/: client.rs  conversions.rs  lib.rs
llm/openai/src/: client.rs  conversions.rs  lib.rs
llm/openrouter/src/: conversions.rs  lib.rs
llm/wit/: golem-llm.wit
search/: Makefile.toml  README.md
search/algolia/src/: lib.rs
search/elasticsearch/src/: client.rs  lib.rs
search/meilisearch/src/: client.rs  lib.rs
search/opensearch/src/: client.rs  lib.rs
search/search/src/: durability.rs
search/typesense/src/: client.rs  lib.rs
stt/: Makefile.toml
stt/aws/src/: bindings.rs
stt/azure/src/: bindings.rs
stt/deepgram/src/: bindings.rs
stt/google/src/: bindings.rs
stt/stt/src/: durability.rs
stt/whisper/src/: bindings.rs
test/embed/components-rust/test-embed/: Cargo.toml  golem.yaml
test/embed/components-rust/test-embed/src/: lib.rs
test/embed/components-rust/test-embed/wit/: test-embed.wit
test/exec/: Cargo.toml
test/exec/components-rust/test-exec-js/: Cargo.toml
test/exec/components-rust/test-exec-js/src/: lib.rs
test/exec/components-rust/test-exec-py/: golem.yaml
test/exec/components-rust/test-exec-py/src/: lib.rs
test/graph/: Cargo.toml
test/graph/components-rust/test-graph/: Cargo.toml
test/graph/components-rust/test-graph/src/: lib.rs
test/llm/: Cargo.toml
test/llm/components-rust/test-llm/: Cargo.toml
test/llm/components-rust/test-llm/src/: lib.rs  utils.rs
test/search/components-rust/test-search/: Cargo.toml
test/search/components-rust/test-search/src/: lib.rs
test/stt/: Cargo.toml
test/stt/components-rust/test-stt/: golem.yaml
test/tts/components-rust/test-tts/: Cargo.toml  golem.yaml
test/tts/components-rust/test-tts/src/: lib.rs
test/tts/components-rust/test-tts/wit/: test-tts.wit
test/vector/components-rust/test-vector/: Cargo.toml  golem.yaml
test/vector/components-rust/test-vector/src/: lib.rs
test/vector/components-rust/test-vector/wit/: test-vector.wit
test/video-advanced/: Cargo.toml
test/video-advanced/components-rust/test-video-advanced/: Cargo.toml  golem.yaml
test/video-advanced/components-rust/test-video-advanced/src/: lib.rs
test/video/components-rust/test-video/: Cargo.toml
test/websearch/components-rust/test-websearch/: Cargo.toml
tts/: Makefile.toml
tts/aws/: Cargo.toml
tts/aws/src/: bindings.rs  client.rs  conversions.rs  lib.rs
tts/aws/wit/: aws.wit
tts/deepgram/: Cargo.toml
tts/deepgram/src/: bindings.rs  client.rs  conversions.rs  lib.rs
tts/deepgram/wit/: deepgram.wit
tts/elevenlabs/: Cargo.toml
tts/elevenlabs/src/: bindings.rs  client.rs  conversions.rs  lib.rs
tts/elevenlabs/wit/: elevenlabs.wit
tts/google/: Cargo.toml
tts/google/src/: bindings.rs  client.rs  conversions.rs  lib.rs
tts/google/wit/: google.wit
tts/tts/: Cargo.toml
tts/tts/src/: config.rs  durability.rs  error.rs  lib.rs
tts/wit/: golem-tts.wit
vector/: Makefile.toml
vector/milvus/: Cargo.toml
vector/milvus/src/: bindings.rs  client.rs  conversions.rs  lib.rs
vector/milvus/wit/: milvus.wit
vector/pgvector/: Cargo.toml
vector/pgvector/src/: bindings.rs  client.rs  conversions.rs  lib.rs
vector/pgvector/wit/: pgvector.wit
vector/pinecone/: Cargo.toml
vector/pinecone/src/: bindings.rs  client.rs  conversions.rs  lib.rs
vector/pinecone/wit/: pinecone.wit
vector/qdrant/: Cargo.toml
vector/qdrant/src/: bindings.rs  client.rs  conversions.rs  lib.rs
vector/qdrant/wit/: qdrant.wit
vector/vector/: Cargo.toml
vector/vector/src/: config.rs  durability.rs  error.rs  lib.rs
vector/vector/wit/: vector.wit
vector/wit/: golem-vector.wit
video/: Makefile.toml  README.md
video/kling/src/: bindings.rs  lib.rs
video/runway/src/: bindings.rs  lib.rs
video/stability/src/: bindings.rs  lib.rs
video/veo/src/: bindings.rs  lib.rs
video/video/src/: durability.rs
websearch/: Makefile.toml  README.md
websearch/google/src/: client.rs
websearch/websearch/src/: durability.rs
