[workspace]
resolver = "2"

members = [
    "llm/llm",
    "llm/bedrock",
    "llm/anthropic",
    "llm/grok",
    "llm/ollama",
    "llm/openai",
    "llm/openrouter",
    "embed/embed",
    "embed/cohere",
    "embed/hugging-face",
    "embed/openai", 
    "embed/voyageai",
    "websearch/websearch",
    "websearch/brave",
    "websearch/google",
    "websearch/serper",
    "websearch/tavily",
    "search/search",
    "search/elasticsearch",
    "search/algolia",
    "search/meilisearch",
    "search/opensearch",
    "search/typesense",
    "graph/graph",
    "graph/arangodb",
    "graph/janusgraph",
    "graph/neo4j",
    "video/video",
    "video/kling",
    "video/runway",
    "video/veo",
    "video/stability",
    "exec/exec",
    "stt/stt",
    "stt/whisper",
    "stt/deepgram",
    "stt/aws",
    "stt/azure",
    "stt/google",
    "vector/vector",
    "vector/milvus",
    "vector/pgvector",
    "vector/pinecone",
    "vector/qdrant",
]

[profile.release]
debug = false
lto = true
opt-level = 's'

[workspace.dependencies]
golem-llm = { path = "llm/llm", version = "0.0.0", default-features = false }
golem-search = { path = "search/search", version = "0.0.0", default-features = false }
golem-graph = { path = "graph/graph", version = "0.0.0", default-features = false }
golem-video = { path = "video/video", version = "0.0.0", default-features = false }
golem-stt = { path = "stt/stt", version = "0.0.0", default-features = false }
golem-vector = { path = "vector/vector", version = "0.0.0", default-features = false}
golem-embed = { path = "embed/embed", version = "0.0.0", default-features = false}
futures = "0.3.31"
golem-rust = "=1.8.1"
log = "0.4.27"
reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-sep-2025", features = [
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
wasi = "=0.14.1+wasi-0.2.3"
wstd = "=0.5.3"
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }
base64 = { version = "0.22.1" }
mime_guess = { version = "2.0.5" }
url = { version = "2.5.4" }
